--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -15,6 +15,107 @@
     </a>
 </div>
 
+<!-- Sort and filter categories -->
+<div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
+    <div class="products_dropdown product_dropdown_sorting">
+        <div class="isotope_sorting_text"><span>Sort</span><i
+                class="fa fa-caret-down" aria-hidden="true"></i></div>
+        <ul>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'ID-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Decreasing by ID'"
+                   th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'ID-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Increasing by ID'"
+                   th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'name-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'A - Z'"
+                   th:style="${sort == 'name-asc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'name-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Z - A'"
+                   th:style="${sort == 'name-desc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'total-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Decreasing by Total'"
+                   th:style="${sort == 'total-desc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'total-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Increasing by Total'"
+                   th:style="${sort == 'total-asc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'subcategory-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Decreasing by Subcategory'"
+                   th:style="${sort == 'subcategory-desc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_sorting_btn">
+                <a th:href="@{/admin-panel#category(sort=${'subcategory-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
+                   th:text="'Increasing by Subcategory'"
+                   th:style="${sort == 'subcategory-asc'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="products_dropdown product_dropdown_filter">
+        <div class="isotope_filter_text"><span>Product Filter</span><i class="fa fa-caret-down"
+                                                                       aria-hidden="true"></i>
+        </div>
+        <ul>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'all'})}"
+                   th:text="'All'" th:style="${filter == 'all'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'book'})}"
+                   th:text="'Book'" th:style="${filter == 'book'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'e-book'})}"
+                   th:text="'E-Book'" th:style="${filter == 'e-book'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'audio-book'})}"
+                   th:text="'Audio Book'" th:style="${filter == 'audio-book'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader'})}"
+                   th:text="'E-Book Reader'" th:style="${filter == 'e-book-reader'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader-case'})}"
+                   th:text="'E-Book Reader Case'" th:style="${filter == 'e-book-reader-case'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+            <li class="item_filter_btn">
+                <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'book-case'})}"
+                   th:text="'Book Case'" th:style="${filter == 'book-case'} ? 'color:#1f5b70'">
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+
 <!-- Category form -->
 <div id="new_category" class="collapse">
 
@@ -68,106 +169,6 @@
 </div>
 
 <span th:if="${categoryPage.totalPages > 0}">
-    <!-- Sort orders -->
-    <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
-        <div class="products_dropdown product_dropdown_sorting">
-            <div class="isotope_sorting_text"><span>Sort</span><i
-                    class="fa fa-caret-down" aria-hidden="true"></i></div>
-            <ul>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'ID-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Decreasing by ID'"
-                       th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'ID-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Increasing by ID'"
-                       th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'name-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'A - Z'"
-                       th:style="${sort == 'name-asc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'name-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Z - A'"
-                       th:style="${sort == 'name-desc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'total-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Decreasing by Total'"
-                       th:style="${sort == 'total-desc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'total-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Increasing by Total'"
-                       th:style="${sort == 'total-asc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'subcategory-desc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Decreasing by Subcategory'"
-                       th:style="${sort == 'subcategory-desc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_sorting_btn">
-                    <a th:href="@{/admin-panel#category(sort=${'subcategory-asc'}, size=${categoryPage.size}, page=${1}, filter=${filter})}"
-                       th:text="'Increasing by Subcategory'"
-                       th:style="${sort == 'subcategory-asc'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="products_dropdown product_dropdown_filter">
-            <div class="isotope_filter_text"><span>Product Filter</span><i class="fa fa-caret-down"
-                                                                           aria-hidden="true"></i>
-            </div>
-            <ul>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'all'})}"
-                       th:text="'All'" th:style="${filter == 'all'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'book'})}"
-                       th:text="'Book'" th:style="${filter == 'book'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'e-book'})}"
-                       th:text="'E-Book'" th:style="${filter == 'e-book'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'audio-book'})}"
-                       th:text="'Audio Book'" th:style="${filter == 'audio-book'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader'})}"
-                       th:text="'E-Book Reader'" th:style="${filter == 'e-book-reader'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader-case'})}"
-                       th:text="'E-Book Reader Case'" th:style="${filter == 'e-book-reader-case'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-                <li class="item_filter_btn">
-                    <a th:href="@{/admin-panel#category(size=${categoryPage.size}, page=${1}, sort=${sort}, filter=${'book-case'})}"
-                       th:text="'Book Case'" th:style="${filter == 'book-case'} ? 'color:#1f5b70'">
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
 
     <br>
 
