--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -59,7 +59,9 @@
                 <ul class="nav nav-tabs justify-content-center" id="siteTab">
                     <li class="nav-item">
                         <a class="nav-link active profile-navbar-text"
-                           th:attr="data-url=@{/admin-panel/user(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
+                           th:attr="data-url=@{/admin-panel/user(size=(${#request.getParameter('size')} ?: '3'),
+                                                                    page=(${#request.getParameter('page')} ?: '1'),
+                                                                    sort=(${#request.getParameter('sort')} ?: 'ID-asc'))}"
                            th:href="@{#user}">Users</a>
                     </li>
 
@@ -75,13 +77,19 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}" th:href="@{#hotList}">Hot
+                        <a class="nav-link profile-navbar-text" th:attr="data-url=@{/admin-panel/hotList(size=(${#request.getParameter('size')} ?: '3'),
+                                                                    page=(${#request.getParameter('page')} ?: '1'),
+                                                                    sort=(${#request.getParameter('sort')} ?: 'ID-asc'),
+                                                                    filter=(${#request.getParameter('filter')} ?: 'all'))}" th:href="@{#hotList}">Hot
                             Lists</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link profile-navbar-text"
-                           th:attr="data-url=@{/admin-panel/campaign(size=(${#request.getParameter('size')} ?: '3'), page=(${#request.getParameter('page')} ?: '1'))}"
+                           th:attr="data-url=@{/admin-panel/campaign(size=(${#request.getParameter('size')} ?: '3'),
+                                                                    page=(${#request.getParameter('page')} ?: '1'),
+                                                                    sort=(${#request.getParameter('sort')} ?: 'ID-asc'),
+                                                                    filter=(${#request.getParameter('filter')} ?: 'all'))}"
                            th:href="@{#campaign}">Campaigns</a>
                     </li>
 
