--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -70,7 +70,6 @@
                                 <option value="">Select Hot List Type</option>
                                 <option value="BEST_SELLERS">Best Sellers</option>
                                 <option value="NEW_RELEASES">New Releases</option>
-                                <option value="OUR_PICKS_FOR_YOU">Our Picks For You</option>
                             </select>
                         </div>
                         <div class="col-md-6">
@@ -126,65 +125,140 @@
                     <div><!--ERROR--></div>
 
                     <!-- Button -->
-                    <input type="submit" class="login_button trans_200" value="Add Campaign" id="new_hotList_button">
+                    <input type="submit" class="login_button trans_200" value="Add Hot List" id="new_hotList_button">
                 </form>
             </div>
         </div>
     </div>
 </div>
-<span th:if="${hotListPage.totalPages>0}">
+
 <!-- Sort orders -->
 <div class="products_bar_side d-flex flex-row align-items-end justify-content-end ml-lg-auto">
     <div class="products_dropdown product_dropdown_sorting">
         <div class="isotope_sorting_text"><span>Sort</span><i
                 class="fa fa-caret-down" aria-hidden="true"></i></div>
         <ul>
-            <li class="item_sorting_btn"
-                data-isotope-option='{ "sortBy": "original-order" }'>ID
-            </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "name" }'>Category
-            </li>
-            <li class="item_sorting_btn" data-isotope-option='{ "sortBy": "product-num" }'>
-                Number of Products
-            </li>
+            <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1},sort=${'ID-desc'},filter=${filter})}"
+                       th:text="'Decreasing by ID'"
+                       th:style="${sort == 'ID-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1},sort=${'ID-asc'},filter=${filter})}"
+                       th:text="'Increasing by ID'"
+                       th:style="${sort == 'ID-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1},sort=${'Product-Num-desc'},filter=${filter})}"
+                       th:text="'Decreasing by Product Num'"
+                       th:style="${sort == 'Product-Num-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1}, sort=${'Product-Num-asc'},filter=${filter})}"
+                       th:text="'Increasing by Product Num'"
+                       th:style="${sort == 'Product-Num-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1},sort=${'Product-Type-asc'},filter=${filter})}"
+                       th:text="'Product Type (A - Z)'"
+                       th:style="${sort == 'Product-Type-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1}, sort=${'Product-Type-desc'},filter=${filter})}"
+                       th:text="'Product Type (Z - A)'"
+                       th:style="${sort == 'Product-Type-desc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1} ,sort=${'Hot-List-Type-asc'},filter=${filter})}"
+                       th:text="'Hot List Type(A - Z)'"
+                       th:style="${sort == 'Hot-List-Type-asc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
+                 <li class="item_sorting_btn">
+                    <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1} ,sort=${'Hot-List-Type-dsc'},filter=${filter})}"
+                       th:text="'Hot List Type (Z - A)'"
+                       th:style="${sort == 'Hot-List-Type-dsc'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+
         </ul>
     </div>
-    <div class="products_dropdown text-right product_dropdown_filter">
-        <div class="isotope_filter_text"><span>Filter</span><i class="fa fa-caret-down"
-                                                               aria-hidden="true"></i></div>
-        <ul>
-            <li class="item_filter_btn" data-filter="*">All</li>
-            <li class="item_filter_btn" data-filter=".ongoing">Ongoing</li>
-            <li class="item_filter_btn" data-filter=".ended">Ended</li>
-            <li class="item_filter_btn" data-filter=".ended">Best Sellers</li>
-            <li class="item_filter_btn" data-filter=".ended">New Releases</li>
-            <li class="item_filter_btn" data-filter=".ended">Our Picks For You</li>
-        </ul>
-    </div>
+    <div class="products_dropdown product_dropdown_filter">
+            <div class="isotope_filter_text"><span>Hot List Filter</span><i class="fa fa-caret-down"
+                                                                           aria-hidden="true"></i>
+            </div>
+            <ul>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'all'})}"
+                       th:text="'All'" th:style="${filter == 'all'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'book'})}"
+                       th:text="'Book'" th:style="${filter == 'book'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'e-book'})}"
+                       th:text="'E-Book'" th:style="${filter == 'e-book'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'audio-book'})}"
+                       th:text="'Audio Book'" th:style="${filter == 'audio-book'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader'})}"
+                       th:text="'E-Book Reader'" th:style="${filter == 'e-book-reader'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'e-book-reader-case'})}"
+                       th:text="'E-Book Reader Case'" th:style="${filter == 'e-book-reader-case'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+                <li class="item_filter_btn">
+                    <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1}, sort=${sort}, filter=${'book-case'})}"
+                       th:text="'Book Case'" th:style="${filter == 'book-case'} ? 'color:#1f5b70'">
+                    </a>
+                </li>
+            </ul>
+        </div>
 </div>
 
 <br>
-
+<span th:if="${hotListPage.totalPages>0}">
 <div>
     <div class="row order - row ">
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
             <div class="profile-order-title">ID</div>
         </div>
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
             <div class="profile-order-title">Product Type</div>
         </div>
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
-            <div class="profile-order-title">Category</div>
-        </div>
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
             <div class="profile-order-title">Hot List Type</div>
         </div>
 
-        <div class="col-lg-2 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
             <div class="profile-order-title">Number of Products</div>
         </div>
     </div>
@@ -198,34 +272,24 @@
                     <div class="category-element">
                         <div class="product_content">
                             <div class="row order - row collapsible">
-                                <div class="col-lg-2 col-md-3 col-xs-6">
+                                <div class="col-lg-3 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
                                         <td th:text="${hotList.getId()}"></td>
                                     </div>
                                 </div>
-                                 <div class="col-lg-2 col-md-3 col-xs-6">
+                                 <div class="col-lg-3 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
                                         <td th:text="${hotList.getProductType()}"></td>
                                     </div>
                                 </div>
-                                <div class="col-lg-2 col-md-3 col-xs-6">
-                                    <div class="profile-order-text">
-                                        <div th:if="${hotList.getCategories().size()>0}">
-                                            <td th:text="${hotList.getCategoryName()}"></td>
-                                            </div>
-                                            <div th:unless="${hotList.getCategories().size()>0}">
-                                                <div>-</div>
-                                            </div>
-                                    </div>
-                                </div>
 
-                                <div class="col-lg-2 col-md-3 col-xs-6">
+                                <div class="col-lg-3 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
                                         <td th:text="${hotList.getHotListType()}"></td>
                                     </div>
                                 </div>
 
-                                <div class="col-lg-2 col-md-3 col-xs-6">
+                                <div class="col-lg-3 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
                                         <td th:text="${hotList.getProductNum()}"></td>
                                     </div>
@@ -249,7 +313,9 @@
 
                 <!-- Previous button -->
                     <li th:style="${currentPage == 1} ? 'display:none'">
-                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${currentPage - 1})}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${currentPage - 1},sort=${sort},
+                                                            filter=${filter})}"
+
                            aria-label="Previous" title="Previous Page" rel="tooltip">
                             <i class="pagination_arrow fa fa-angle-left"></i>
                         </a>
@@ -258,7 +324,8 @@
                 <!-- First page -->
                     <li th:if="${hotListPage.totalPages > 0}"
                         th:class="${currentPage == 1} ? 'active'">
-                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1})}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${1},sort=${sort},
+                                                            filter=${filter})}"
                            th:title="${'Page '+ 1}"
                            th:text="${1}" style="color: #fbaa1d;">
                         </a>
@@ -271,7 +338,8 @@
                         th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                         , hotListPage.totalPages > 2 + currentPage ? currentPage + 2 : hotListPage.totalPages - 1, 1)}"
                         th:class="${currentPage == i} ? 'active'">
-                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${i})}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${i},sort=${sort},
+                                                            filter=${filter})}"
                            th:text="${i}" th:title="${'Page '+ i}" style="color: #fbaa1d;"></a>
                     </li>
 
@@ -280,7 +348,8 @@
                 <!-- Last page -->
                     <li th:if="${hotListPage.totalPages > 1}"
                         th:class="${currentPage == hotListPage.totalPages} ? 'active'">
-                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${hotListPage.totalPages})}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${hotListPage.totalPages},sort=${sort},
+                                                            filter=${filter})}"
                            th:text="${hotListPage.totalPages}" style="color: #fbaa1d;"
                            th:title="${'Page '+ hotListPage.totalPages}">
                         </a>
@@ -288,7 +357,8 @@
 
                 <!-- Next button -->
                     <li th:style="${currentPage == hotListPage.totalPages} ? 'display:none'">
-                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${currentPage + 1})}"
+                        <a th:href="@{/admin-panel#hotList(size=${hotListPage.size}, page=${currentPage + 1},sort=${sort},
+                                                            filter=${filter})}"
                            aria-label="Next" title="Next Page" rel="tooltip">
                             <i class="pagination_arrow fa fa-angle-right"></i>
                         </a>
@@ -338,7 +408,7 @@
             subctgry = "" ;
             category = "" ;
         }
-
+        var hotListType =$('#new_hot_list_type option:selected').val();
         var ret = {
 
             productNum: $('#new_hot_list_product_number').val(),
@@ -347,11 +417,11 @@
             productType: productType,
             startTime: $('#new_hot_list_start_time').val(),
             endTime: $('#new_hot_list_end_time').val(),
-            hotListType:$('#new_hot_list_type option:selected').val(),
+            hotListType:hotListType,
             subctgry:subctgry,
             category:category,
-            ptype:productType
-
+            ptype:productType,
+            htype:hotListType
 
         };
 
